force-app/main/default/objects/Rating__c/fields/Rating_given_to_Which_Student__c.field-meta.xml
<CustomField>
    <fullName>Rating_given_to_Which_Student__c</fullName>
    <label>Rating given to Which Student</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Student__c.CGPA__c</field>
            <operation>lessOrEqual</operation>
            <value>90.0000</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Ratings</relationshipLabel>
    <relationshipName>Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>