force-app/main/default/objects/Rating__c/fields/Rating_out_of_10__c.field-meta.xml
<CustomField>
    <fullName>Rating_out_of_10__c</fullName>
    <defaultValue>0</defaultValue>
    <externalId>true</externalId>
    <label>Rating out of 10</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>