force-app/main/default/objects/Rating__c/fields/Student_Contact__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact__c</fullName>
    <formula>Rating_given_to_Which_Student__r.Contact_Number__c</formula>
    <label>Student Contact</label>
    <type>Text</type>
</CustomField>