force-app/main/default/objects/Rating__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Rating_given_to_Which_Student__r.Student_First_Name__c</formula>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>